projects/vb6parse/snapshots/parsers/cst/select_statements/select_case_nested.snap
---
source: projects/vb6parse/src/parsers/cst/select_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: x
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "1"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: SelectCaseStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: SelectKeyword
                              text: Select
                            - kind: Whitespace
                              text: " "
                            - kind: CaseKeyword
                              text: Case
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: y
                            - kind: Newline
                              text: "\n"
                            - kind: Whitespace
                              text: "                "
                            - kind: CaseClause
                              children:
                                - kind: CaseKeyword
                                  text: Case
                                - kind: Whitespace
                                  text: " "
                                - kind: IntegerLiteral
                                  text: "10"
                                - kind: Newline
                                  text: "\n"
                                - kind: StatementList
                                  children:
                                    - kind: Whitespace
                                      text: "                    "
                                    - kind: AssignmentStatement
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: result
                                        - kind: Whitespace
                                          text: " "
                                        - kind: EqualityOperator
                                          text: "="
                                        - kind: Whitespace
                                          text: " "
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "11"
                                        - kind: Newline
                                          text: "\n"
                                    - kind: Whitespace
                                      text: "                "
                            - kind: CaseClause
                              children:
                                - kind: CaseKeyword
                                  text: Case
                                - kind: Whitespace
                                  text: " "
                                - kind: IntegerLiteral
                                  text: "20"
                                - kind: Newline
                                  text: "\n"
                                - kind: StatementList
                                  children:
                                    - kind: Whitespace
                                      text: "                    "
                                    - kind: AssignmentStatement
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: result
                                        - kind: Whitespace
                                          text: " "
                                        - kind: EqualityOperator
                                          text: "="
                                        - kind: Whitespace
                                          text: " "
                                        - kind: NumericLiteralExpression
                                          children:
                                            - kind: IntegerLiteral
                                              text: "21"
                                        - kind: Newline
                                          text: "\n"
                                    - kind: Whitespace
                                      text: "            "
                            - kind: EndKeyword
                              text: End
                            - kind: Whitespace
                              text: " "
                            - kind: SelectKeyword
                              text: Select
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "2"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: AssignmentStatement
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: result
                            - kind: Whitespace
                              text: " "
                            - kind: EqualityOperator
                              text: "="
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "2"
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
